[package]
name = "el_monitorro"
version = "0.14.0"
authors = ["Ayrat Badykov <ayratin555@gmail.com>"]
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
aho-corasick = "1.1"
atom_syndication = "0.12"
chrono = "0.4"
diesel = { version = "2", features = ["postgres","r2d2"] }
dotenvy = "0.15"
pretty_env_logger = "0.5"
fang = { version = "0.11.0-rc1", features = ["blocking-postgres"], default-features = false}
feed-rs = "2.1"
frankenstein = { version = "0.39", default-features = false, features = ["trait-sync"] }
handlebars = "6.0"
hex = "0.4"
htmlescape = "0.3"
isahc = "1.7"
log = "0.4"
nanohtml2text = "0.1.4"
rayon = "1.10"
rss = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
typed-builder = "0.19"
url = "2.5"
uuid = { version = "1.10", features = ["v4"] }

[dev-dependencies]
mockito = "1"
